sol/2018_p1_f1_piramide.txt
Pirâmide
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 1.0 GB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2018f1p1_piramide.cpp: In function ‘int minPiramide(std::vector<std::vector<int> >&)’:
2018f1p1_piramide.cpp:20:21: error: ‘INT_MAX’ was not declared in this scope
   20 |     int minWeight = INT_MAX;
      |                     ^~~~~~~
2018f1p1_piramide.cpp:4:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    3 | #include <algorithm>
  +++ |+#include <climits>
    4 |
